fixed Login Not Showing

--- a/src/design/app.css
+++ b/src/design/app.css
@@ -2,3 +2,6 @@
   background-color: #3A53AF !important
 }
 
+#contents {
+  display: none;
+}
